--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               >
             </li>
             <li class="header-nav-list-item">
-              <a class="header-nav-list-item-link link" href="">Contacts</a>
+              <a class="header-nav-list-item-link link" href="./contacts.html">Contacts</a>
             </li>
           </ul>
         </nav>
