--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
     <!-- header -->
     <header class="header">
-      <div class="header-container container">
+      <div class="header-container">
         <nav class="header-nav">
           <a class="logo link" href="./index.html"
             >Web<span class="logo-dark">Studio</span>
